Use Java 17 language features
Formatted strings

@Serial annotation

Replace Paths.of() with Path.of()